--- a/src/app/modules/comments/comments.component.css
+++ b/src/app/modules/comments/comments.component.css
@@ -1,16 +1,29 @@
-.userimage {
-    height: 25px;
-    width: 25px;
-    border-radius: 50%;
-    margin: 8px;
-}
 .postimage {
     background-size: cover;
-    width: 260px;
+    width: 210px;
 }
 
 .post {
-    width: 280px;
+    width: 210px;
     margin: 10px;
     padding: 10px;
+}
+
+.title {
+    text-align: center;
+    color: #b92b27;
+    color: -webkit-linear-gradient(to right, #1565c0, #b92b27);
+    color: linear-gradient(to right, #1565c0, #b92b27);
+} /*
+.container {
+    display: flex;
+    justify-content: space-between;
+}*/
+
+.content {
+    margin-top: 18px;
+    margin-bottom: 25px;
+}
+.content > mat-card {
+    width: 50%;
 }
