--- a/src/app/modules/comments/comments.component.html
+++ b/src/app/modules/comments/comments.component.html
@@ -1,47 +1,29 @@
-<mat-accordion fxLayout="column" fxLayoutGap="5px">
-    <mat-expansion-panel *ngFor="let user of Userservice.User" (opened)="panelOpenState = true"
-        (closed)="panelOpenState = false">
-        <mat-expansion-panel-header>
-            <mat-panel-title>
-                <img class="userimage" src="{{user.imageuser}}" alt="user image">
-                <div fxLayoutAlign="center center">
-                    {{user.nom}} {{user.prenom}}
-                </div>
-
-            </mat-panel-title>
-            <mat-panel-description>
-                <div fxLayoutAlign="center center">
-                    {{user.nom}} {{user.prenom}}'s Comments
-                </div>
-            </mat-panel-description>
-        </mat-expansion-panel-header>
-
-        <div class="post" fxLayout="row wrap inline" fxLayoutAlign="center center" fxLayoutGap="10px"
-            *ngFor="let post of user.posts">
-
-            <div fxLayout="column">
-                <mat-expansion-panel hideToggle>
-                    <mat-expansion-panel-header>
-                        <mat-panel-title>
-                            Post's Comments
-                        </mat-panel-title>
-                    </mat-expansion-panel-header>
-                    <div>
-                        <div *ngFor="let comm of post.comments">
-                            {{comm.comment}}
-                            <div fxLayoutGap="10px" fxLayoutAlign="center center"><br>
-                                <button mat-icon-button color="warn">
-                                    <mat-icon>
-                                        delete_outline
-                                    </mat-icon>
-                                </button>
-                            </div>
+<!--<div fxLayoutAlign="center">
+    <mat-form-field #tooltip="matTooltip" matTooltip="Search For a Comment" appearance="outline">
+        <mat-label>Search for a Comment</mat-label>
+        <input matInput placeholder="Enter Something">
+        <mat-icon matSuffix>search</mat-icon>
+    </mat-form-field>
+</div>
+<mat-divider></mat-divider> -->
+<div>
+    <div *ngFor="let user of Userservice.User" fxLayoutGap="10px grid ">
+        <div *ngFor="let post of user.posts" fxLayout="row wrap" fxLayoutGap="10px grid" fxLayoutAlign=" center center">
+            <div *ngFor="let comm of post.comments" fxFlex="25" fxFlex.sm="33.3" fxFlex.xs="50">
+                <div>
+                    <mat-card>
+                        {{comm.comment}}
+                        <div fxLayoutAlign="center">
+                            <button mat-icon-button color="warn" #tooltip="matTooltip" matTooltip="Delete this Comment"
+                                (click)="DeleteComment(user,post._id,comm._id)">
+                                <mat-icon>
+                                    delete
+                                </mat-icon>
+                            </button>
                         </div>
-                    </div>
-
-                </mat-expansion-panel>
-
+                    </mat-card>
+                </div>
             </div>
         </div>
-    </mat-expansion-panel>
-</mat-accordion><br><br>
+    </div><br><br>
+</div>
