--- a/src/app/modules/users/users.component.html
+++ b/src/app/modules/users/users.component.html
@@ -1,4 +1,59 @@
-<div fxLayout="row wrap inline" fxLayoutAlign="center" fxLayoutGap="30px">
+<!-- <div fxLayoutAlign="center">
+    <mat-form-field appearance="outline" #tooltip="matTooltip" matTooltip="Search For a User">
+        <mat-label>Search for a User</mat-label>
+        <input matInput placeholder="Enter User's Name " (keyup)="applyFilter($event)">
+        <button mat-icon-button matSuffix>
+            <mat-icon>search</mat-icon>
+        </button>
+    </mat-form-field>
+</div>
+<mat-divider></mat-divider>
+-->
+<div fxLayout="row wrap inline" fxLayoutAlign="center center" fxLayoutGap="30px">
+    <mat-card *ngFor="let user of Userservice.User">
+        <div fxLayoutAlign="center center">
+            <div class="info" fxLayout="column" fxLayoutAlign="center center">
+                <div>
+                    <img class="userimage" src="{{user.imageuser}}" alt="User Image">
+                </div>
+                <div class="user">
+                    <h3>{{user.nom}} {{user.prenom}}</h3>
+                </div>
+                <div fxLayoutGap=" 5px">
+                    <button mat-icon-button color="primary" #tooltip="matTooltip" matTooltip="Show User Details"
+                        (click)="opendialoguser(user)">
+                        <mat-icon>
+                            person
+                        </mat-icon>
+                    </button>
+
+                    <button mat-icon-button color="warn" #tooltip="matTooltip" matTooltip="Ban this User"
+                        (click)="BanUser(user)">
+                        <mat-icon>
+                            lock
+                        </mat-icon>
+                    </button>
+
+                    <button mat-icon-button color="primary" #tooltip="matTooltip" matTooltip="UnBan this User"
+                        (click)="UnBanUser(user)">
+                        <mat-icon>
+                            lock_open
+                        </mat-icon>
+                    </button>
+
+                    <button mat-icon-button color="warn" #tooltip="matTooltip" matTooltip="Remove this User"
+                        (click)="delete(user._id)">
+                        <mat-icon>
+                            person_remove
+                        </mat-icon>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </mat-card><br>
+</div><br><br>
+
+<!--
     <mat-card>
         <div fxLayout="column" fxLayoutAlign="space-around center">
             <div>
@@ -11,39 +66,22 @@
             </div>
         </div>
     </mat-card>
+--------------------------------------------------------------------------------------------------
+    
+    <mat-form-field>
+    <mat-label> Search </mat-label>
+    <input fxLayoutAlign="stretch" matInput placeholder=" Search for a User" />
+    <mat-icon matSuffix>search</mat-icon>
+</mat-form-field>
 
-    <mat-card *ngFor="let user of Userservice.User">
-        <div>
-            <div class="info" fxLayout="column" fxLayoutAlign="center center">
-                <div>
-                    <img class="userimage" src="{{user.imageuser}}" alt="User Image">
-                </div>
-                <div class="user">
-                    <h3>{{user.nom}} {{user.prenom}}</h3>
-                </div>
-                <div fxLayoutGap=" 5px">
-                    <button mat-icon-button color="primary" (click)="opendialoguser(user)">
-                        <mat-icon>
-                            preview
-                        </mat-icon>
-                    </button>
-                    <button mat-icon-button color="warn" (click)="delete(user._id)">
-                        <mat-icon>
-                            delete_outline
-                        </mat-icon>
-                    </button>
-                </div>
-            </div>
-        </div>
-    </mat-card><br>
-</div><br><br>
 
-<!--<mat-table [dataSource]="dataSource">
+<mat-table [dataSource]="dataSource">
     <ng-container matColumnDef="nom">
         <mat-header-cell *matHeaderCellDef>Nom</mat-header-cell>
         <mat-cell *matCellDef="let user">
-            <img src="{{user.imageuser}}" alt="UserImage" />
-            {{user.nom}}</mat-cell>
+            <img class="imageu" src="{{user.imageuser}}" alt="UserImage" />
+            {{user.nom}}
+        </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="prenom">
@@ -65,7 +103,10 @@
         <mat-header-cell *matHeaderCellDef>Informations</mat-header-cell>
         <mat-cell *matCellDef="let user">
             <button mat-icon-button color="primary" (click)="opendialoguser(user)">
-                <mat-icon>person_search</mat-icon>
+                <mat-icon> wysiwyg </mat-icon>
+            </button>
+            <button mat-icon-button color="warn" (click)=" BanUser(user)">
+                <mat-icon> remove_circle_outline </mat-icon>
             </button>
         </mat-cell>
     </ng-container>
@@ -73,9 +114,10 @@
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
 </mat-table>
-<br>
+<br> -->
 
 
+<!--
 <mat-card *ngFor="let user of Userservice.User">
     <mat-card-header>
         <img matCardAvatar src="{{user.imageuser}}">
@@ -94,43 +136,5 @@
         <button mat-button color="primary" (click)="onAction(event)">Banner</button>
         <button mat-button color="primary" (click)="onAction(event)">Supprimer</button>
     </mat-card-actions>
-</mat-card>-->
-
-
-
-<!--
-<form #userform="ngForm" (ngSubmit)="onSubmit(userform)">
-    <input type="hidden" name="_id" #_id="ngModel" [(ngModel)]="Userservice.SelectedUser._id">
-
-    <mat-form-field appearance="outline">
-        <mat-label> nom </mat-label>
-        <input matInput placeholder="Your name" name="nom" #nom="ngModel" [(ngModel)]="Userservice.SelectedUser.nom" />
-    </mat-form-field>
-    <br>
-    <mat-form-field appearance="outline">
-        <mat-label> prenom </mat-label>
-        <input matInput placeholder="Your prenom" name="prenom" #prenom="ngModel"
-            [(ngModel)]="Userservice.SelectedUser.prenom" />
-    </mat-form-field>
-    <br>
-    <mat-form-field appearance="outline">
-        <mat-label> mail </mat-label>
-        <input matInput placeholder="Your mail" name="mail" #mail="ngModel"
-            [(ngModel)]="Userservice.SelectedUser.mail" />
-    </mat-form-field>
-    <br>
-    <mat-form-field appearance="outline">
-        <mat-label> numtel </mat-label>
-        <input matInput placeholder="Your phone" name="numtel" #numtel="ngModel"
-            [(ngModel)]="Userservice.SelectedUser.numtel" />
-    </mat-form-field>
-    <br>
-    <mat-form-field appearance="outline">
-        <mat-label> password </mat-label>
-        <input matInput placeholder="Your password" name="motdepasse" #motdepasse="ngModel"
-            [(ngModel)]="Userservice.SelectedUser.motdepasse" />
-    </mat-form-field><br>
-    <button mat-stroked-button color="warn" type="button" (click)="resetdata(userform)"> Cancel </button>
-    <button mat-stroked-button color="primary" type="submit"> Save </button><br>
-</form>
+</mat-card>
 -->
