--- a/src/app/shared/components/header/header.component.css
+++ b/src/app/shared/components/header/header.component.css
@@ -1,8 +1,14 @@
 ul li {
     list-style: none;
 }
-
 .zanimo {
     font-family: cursive;
     margin-left: 10px;
 }
+/*
+.toolbar {
+    background: #b92b27;
+    background: -webkit-linear-gradient(to right, #1565c0, #b92b27);
+    background: linear-gradient(to right, #1565c0, #b92b27);
+}
+*/
